panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__constexpr__test_error_arithmetic_on_exposed_address_bytes.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/constexpr/test_error_arithmetic_on_exposed_address_bytes.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/constexpr/test_error_arithmetic_on_exposed_address_bytes.c"
   (typedef ptrdiff_t `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))`)
   (typedef size_t `typeof((sizeof `char`))`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `typeof(nullptr)`)
   (declaration a~0 `int` ∅)
   (declaration b~1 `typeof((sizeof `char`))` (cast `typeof((sizeof `char`))` (addressof (name a~0 `int`))))
   (declaration c~2 `typeof((sizeof `char`))` (cast `typeof((sizeof `char`))` (add (addressof (name a~0 `int`)) 1)))
   (declaration d~3 `typeof((sizeof `char`))` (add (cast `typeof((sizeof `char`))` (addressof (name a~0 `int`))) 1))
   (declaration e~4 `typeof((sizeof `char`))` (compl (cast `typeof((sizeof `char`))` (addressof (name a~0 `int`)))))
   (declaration f~5 `typeof((sizeof `char`))` (negate (cast `typeof((sizeof `char`))` (addressof (name a~0 `int`)))))
   (declaration g~6 `typeof((sizeof `char`))` (divide (cast `typeof((sizeof `char`))` (addressof (name a~0 `int`))) 2))
   (declaration h~7 `typeof((sizeof `char`))` (multiply 2 (cast `typeof((sizeof `char`))` (addressof (name a~0 `int`)))))
   (declaration i~8 `typeof((sizeof `char`))` (bit-or (cast `typeof((sizeof `char`))` (addressof (name a~0 `int`))) (cast `typeof((sizeof `char`))` (addressof (name a~0 `int`))))))

----- stderr -----
