panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__constexpr__test_error_integral_expected.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/constexpr/test_error_integral_expected.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/constexpr/test_error_integral_expected.c"
   (struct T~0
      (member x (bitfield-width (string "42")) `int`))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration xs~3 `array<int; (string "42")>` ∅)
         (declaration ys~4 `array<int; ∅>`
            (braced
               (designation ((index (string "42"))) 123)))
         (declaration x~5 `int` ∅)
         (declaration zs~6 `array<int; (cast `long` (addressof (name x~5 `int`)))>` ∅)
         (struct T2~7
            (member x (bitfield-width (cast `int` (addressof (name x~5 `int`)))) `int`)))))

----- stderr -----
